# mia

./: .gitignore  Makefile  Package.swift
Resources/: Mia.entitlements
Sources/Mia/: AppState.swift  HotkeyManager.swift  MiaApp.swift
Sources/Mia/Audio/: AudioDeviceManager.swift  MicCapture.swift  SystemAudioCapture.swift  TTSOutput.swift
Sources/Mia/Settings/: AppSettings.swift  LanguageList.swift  SettingsView.swift
Sources/Mia/Translation/: OpenAIProvider.swift  SonioxProvider.swift  TranslationPipeline.swift  TranslationProvider.swift
Sources/Mia/UI/: ContentView.swift  SubtitleHUD.swift  SubtitleView.swift
sandbox/: main.py  pyproject.toml
sandbox/web/: app.js  index.html  styles.css
scripts/: build-app.sh
